--- a/style.css
+++ b/style.css
@@ -1,47 +1,47 @@
 body {    
     
-font-family: Arial, sans-serif; 
-display: flex;   
-justify-content: center;     
-align-items: center;    
- height: 100vh;     
-margin: 0;    
-background-color: #0a0a0b;
-    }   
- #auth-container, #welcome-page {    
-background:#e2ed17;
- padding: 2rem;    
- border-radius: 8px;  
-box-shadow: 0 4px 6px rgba(7, 110, 189, 0.1);     
-width: 300px;     
-text-align: center;   
- }   
- input {      
-padding: 0.5rem;  
-border: 1px solid #090909;      
-border-radius: 4px;     
-width: 100%;     
-margin-bottom: 1rem;  
-  }   
-  button { 
-padding: 0.5rem; 
-border: none;  
-border-radius: 4px;   
-background-color: #725a77;   
- color: white;     
-cursor: pointer;    
- width: 100%;  
-  }       
-button:hover {      
-background-color: #0d9b7c;  
-  }      
- a {      
-color: #095b88;      
-text-decoration: none; 
-   }  
-  a:hover {     
-  text-decoration: underline;  
-  }  
-  #auth-container:hover{
-    background-color: #460553;
-  }
+    font-family: Arial, sans-serif; 
+    display: flex;   
+    justify-content: center;     
+    align-items: center;    
+     height: 100vh;     
+    margin: 0;    
+    background-image: linear-gradient(rgb(219, 41, 163),pink,yellow)
+        }   
+     #auth-container, #welcome-page {    
+    background:#4a5388;
+     padding: 2rem;    
+     border-radius: 8px;  
+    box-shadow: 0 4px 6px rgba(7, 110, 189, 0.1);     
+    width: 300px;     
+    text-align: center;   
+     }   
+     input {      
+    padding: 0.5rem;  
+    border: 1px solid #090909;      
+    border-radius: 4px;     
+    width: 100%;     
+    margin-bottom: 1rem;  
+      }   
+      button { 
+    padding: 0.5rem; 
+    border: none;  
+    border-radius: 4px;   
+    background-color: #911ca8;   
+     color: white;     
+    cursor: pointer;    
+     width: 100%;  
+      }       
+    button:hover {      
+    background-color: #ab268c;  
+      }      
+     a {      
+    color: #2c5063;      
+    text-decoration: none; 
+       }  
+      a:hover {     
+      text-decoration: underline;  
+      }  
+      #auth-container:hover{
+        background-color: #480b16;
+      }
